<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cold"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/text"
        android:textIsSelectable="false"
        android:textSize="15dp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/url"
        android:layout_marginLeft="9dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/text2"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/url"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/nliveo_white"
        android:elevation="3dp"
        android:gravity="start|center"
        android:paddingLeft="3dp"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="false"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="80dp"
        android:layout_marginLeft="9dp"
        android:layout_marginRight="9dp"
        android:background="@color/nliveo_white"
        android:elevation="3dp"
        android:gravity="start"
        android:hint="@string/hint"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/send_button"
        android:textColor="@color/nliveo_white" />

</RelativeLayout>